--- a/my-app/src/pages/payment/ui/styles.module.scss
+++ b/my-app/src/pages/payment/ui/styles.module.scss
@@ -1,7 +1,8 @@
 @import "src/shared/styles/vars";
 
 .form {
-  width: 600px;
+  width: 100%;
+  max-width: 600px;
   height: 840px;
   background-color: $base-color;
   border-radius: 10px;
