--- a/my-app/src/pages/payment/ui/styles.module.scss
+++ b/my-app/src/pages/payment/ui/styles.module.scss
@@ -3,7 +3,7 @@
 .form {
   width: 100%;
   max-width: 600px;
-  height: 840px;
+  min-height: 650px;
   background-color: $base-color;
   border-radius: 10px;
   margin: 20px auto;
@@ -26,5 +26,10 @@
     a:hover {
       color: $base-color;
     }
+  }
+}
+@media(max-width: 600px) {
+  .container {
+    padding: 10px;
   }
 }
